; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/midi/extr_midi.c_midi_packet_length.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/midi/extr_midi.c_midi_packet_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@THREE = common dso_local global i32 0, align 4
@TWO = common dso_local global i32 0, align 4
@ONE = common dso_local global i32 0, align 4
@UNDEFINED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @midi_packet_length(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 240
  switch i32 %5, label %21 [
    i32 145, label %6
    i32 140, label %6
    i32 141, label %6
    i32 146, label %6
    i32 139, label %6
    i32 138, label %8
    i32 144, label %8
    i32 135, label %8
    i32 240, label %10
  ]

6:                                                ; preds = %1, %1, %1, %1, %1
  %7 = load i32, i32* @THREE, align 4
  store i32 %7, i32* %2, align 4
  br label %23

8:                                                ; preds = %1, %1, %1
  %9 = load i32, i32* @TWO, align 4
  store i32 %9, i32* %2, align 4
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  switch i32 %11, label %19 [
    i32 143, label %12
    i32 131, label %12
    i32 134, label %12
    i32 142, label %12
    i32 133, label %12
    i32 147, label %12
    i32 137, label %12
    i32 130, label %12
    i32 136, label %14
    i32 132, label %16
    i32 135, label %16
    i32 128, label %18
    i32 129, label %18
  ]

12:                                               ; preds = %10, %10, %10, %10, %10, %10, %10, %10
  %13 = load i32, i32* @ONE, align 4
  store i32 %13, i32* %2, align 4
  br label %23

14:                                               ; preds = %10
  %15 = load i32, i32* @THREE, align 4
  store i32 %15, i32* %2, align 4
  br label %23

16:                                               ; preds = %10, %10
  %17 = load i32, i32* @TWO, align 4
  store i32 %17, i32* %2, align 4
  br label %23

18:                                               ; preds = %10, %10
  br label %19

19:                                               ; preds = %10, %18
  %20 = load i32, i32* @UNDEFINED, align 4
  store i32 %20, i32* %2, align 4
  br label %23

21:                                               ; preds = %1
  %22 = load i32, i32* @UNDEFINED, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %19, %16, %14, %12, %8, %6
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
